tests/ui/consts/missing_assoc_const_type2.stderr
error: missing type for `const` item
  --> $DIR/missing_assoc_const_type2.rs:12:17
   |
LL |     const FIRST:  = 10;
   |                 ^ help: provide a type for the associated constant: `u8`

note: erroneous constant encountered
  --> $DIR/missing_assoc_const_type2.rs:18:5
   |
LL |     TwoDigits::FIRST as usize
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

